reverting to jar packaging type